# course_work_4

./: .coverage  README.md  main.py  pyproject.toml
src/: functions.py  hh_api.py  jsonsaver.py  search_vacancies.py  vacancy.py
tests/: test_functions.py  test_hh_api.py  test_jsonsaver.py  test_search_vacancies.py  test_vacancy.py
